# fluid_simulation

./: README.md
SPH/: CMakeLists.txt  README.md  fluid.cpp  fluid.hpp  fluid_OpenMP.cpp  fluid_OpenMP.h  fluid_cuda.cu  fluid_cuda.cuh  main.cpp  particle.cpp  particle.hpp
SPH/SIDE/12 - 2197/: cuda.csv  omp.csv  sequential.csv
SPH/SIDE/16 - 4913/: cuda.csv  omp.csv  sequential.csv
SPH/SIDE/20 - 9261/: cuda.csv  omp.csv  sequential.csv
SPH/SIDE/8 - 729/: cuda.csv  omp.csv  sequential.csv
fluid_simulation/SPH/: CMakeLists.txt  README.md  fluid.hpp  fluid_cuda.cuh
fluid_simulation/SPH/SIDE/16 - 4913/: omp.csv  sequential.csv
fluid_simulation/SPH/SIDE/8 - 729/: cuda.csv
